// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem should not render activated 1`] = `
<div>
  <li
    class="nav-item"
  >
    <a
      class="nav-link "
      href="/test"
    >
      Test
    </a>
  </li>
</div>
`;

exports[`NavItem should render activated 1`] = `
<div>
  <li
    class="nav-item"
  >
    <a
      class="nav-link active"
      href="/test"
    >
      Test
    </a>
  </li>
</div>
`;
